# subgraph-monitor

./: .env.example  Cargo.toml  vercel.json
api/: subgraph-status.rs
src/: main.rs  test.rs
